# freepalette

./: .clippy.toml  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/freepalette-cli/: Cargo.toml
crates/freepalette-cli/src/: main.rs
crates/freepalette-cli/tests/: cli.rs
crates/freepalette-core/: Cargo.toml
crates/freepalette-core/src/: config.rs  error.rs  fuzzy.rs  lib.rs  ranking.rs  registry.rs
crates/freepalette-core/src/providers/: app.rs  calculator.rs  clipboard.rs  mod.rs  shell.rs
crates/freepalette-daemon/: Cargo.toml
crates/freepalette-daemon/src/: hotkey.rs  lib.rs  main.rs
crates/freepalette-plugin-api/: Cargo.toml
crates/freepalette-plugin-api/src/: lib.rs
crates/freepalette-ui/: Cargo.toml
crates/freepalette-ui/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  CLIPBOARD_SECURITY.md  DEVELOPMENT.md  GITHUB_SETTINGS.md  GOVERNANCE.md  HOTKEYS.md  NON_GOALS.md  PHILOSOPHY.md  PLUGIN_MODEL.md  RELEASES.md  ROADMAP.md
examples/config/: freepalette.toml
