[package]
name = "freepalette-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Provider registry, fuzzy search, ranking, config, and built-in providers for freepalette."

[dependencies]
directories.workspace = true
fuzzy-matcher.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dependencies.freepalette-plugin-api]
path = "../freepalette-plugin-api"

[lints]
workspace = true
