[package]
name = "freepalette-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Background state owner for freepalette."

[[bin]]
name = "freepalette-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies.freepalette-core]
path = "../freepalette-core"

[lints]
workspace = true
