[package]
name = "freepalette-plugin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Stable provider and action API types for freepalette."

[dependencies]
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
