[package]
name = "freepalette-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Placeholder UI crate for the future freepalette desktop frontend."

[[bin]]
name = "freepalette-ui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
eframe.workspace = true
freepalette-core = { path = "../freepalette-core" }
freepalette-daemon = { path = "../freepalette-daemon" }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
